--- a/Samples/AlarmBot/AlarmBot.csproj
+++ b/Samples/AlarmBot/AlarmBot.csproj
@@ -11,14 +11,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.Bot.Builder.BotFramework" Version="4.0.0-alpha201802123" />
+    <PackageReference Include="Promptly-Bot" Version="0.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Libraries\PromptlyBot\PromptlyBot.csproj" />
   </ItemGroup>
 
 </Project>
