--- a/Libraries/PromptlyBot/PromptlyBot.csproj
+++ b/Libraries/PromptlyBot/PromptlyBot.csproj
@@ -7,7 +7,7 @@
     <Company>Chris Mayo</Company>
     <Product />
     <Authors>Chris Mayo</Authors>
-    <Version>0.0.1</Version>
+    <Version>0.0.2</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Description>.NET Conversation modelling library for building bots with Bot Builder SDK V4.</Description>
     <PackageLicenseUrl>https://github.com/cmayomsft/promptly-dotnet</PackageLicenseUrl>
@@ -15,6 +15,8 @@
     <RepositoryUrl>https://github.com/cmayomsft/promptly-dotnet</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
     <PackageTags>Bot, chat, API, Bot Builder SDK, conversation, CUI</PackageTags>
+    <AssemblyVersion>0.0.2.0</AssemblyVersion>
+    <FileVersion>0.0.2.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
