--- a/Samples/AlarmBot/AlarmBot.csproj
+++ b/Samples/AlarmBot/AlarmBot.csproj
@@ -10,8 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
-    <PackageReference Include="Microsoft.Bot.Builder.BotFramework" Version="4.0.0-alpha201802123" />
-    <PackageReference Include="Promptly-Bot" Version="0.0.3" />
+    <PackageReference Include="Microsoft.Bot.Builder" Version="4.0.0-alpha20180221" />
+    <PackageReference Include="Promptly-Bot" Version="0.0.4" />
   </ItemGroup>
 
   <ItemGroup>
