Removed check for XML docs until I can complete them library wide.

--- a/Libraries/PromptlyBot/PromptlyBot.csproj
+++ b/Libraries/PromptlyBot/PromptlyBot.csproj
@@ -20,7 +20,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netstandard2.0\PromptlyBot.xml</DocumentationFile>
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
