--- a/Libraries/PromptlyBot/PromptlyBot.csproj
+++ b/Libraries/PromptlyBot/PromptlyBot.csproj
@@ -24,7 +24,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Bot.Builder" Version="4.0.0-alpha20180221" />
+    <PackageReference Include="Microsoft.Bot.Builder" Version="4.0.0-alpha2018031301" />
+    <PackageReference Include="Microsoft.Bot.Builder.Core.Extensions" Version="4.0.0-alpha2018031301" />
   </ItemGroup>
 
 </Project>
