--- a/Samples/AlarmBot/AlarmBot.csproj
+++ b/Samples/AlarmBot/AlarmBot.csproj
@@ -10,7 +10,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
-    <PackageReference Include="Microsoft.Bot.Builder" Version="4.0.0-alpha20180221" />
+    <PackageReference Include="Microsoft.Bot.Builder" Version="4.0.0-alpha2018031301" />
+    <PackageReference Include="Microsoft.Bot.Builder.Core.Extensions" Version="4.0.0-alpha2018031301" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.0.0-alpha2018031301" />
     <PackageReference Include="Promptly-Bot" Version="0.0.5" />
   </ItemGroup>
 
